Finish concert_evaluation

--- a/app/views/public/home/top.html.erb
+++ b/app/views/public/home/top.html.erb
@@ -58,7 +58,7 @@
       </table>
     </div>
   </div>
-  <div class="text-right">
+  <div class="text-right mb-5">
     <%= link_to "全てのコンサート情報を見る＞",  public_concerts_path %>
   </div>
 </div>
