--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -17,10 +17,10 @@
            </td>
         </tr>
         <tr>
-           <td>支払い方法</td>
+           <td class='table-secondary'>支払い方法</td>
             <td><%= @order.payment_method_i18n %></td>
         </tr>
-            <td>ステーテス</td>
+            <td class='table-secondary'>ステーテス</td>
             <td><%= @order.status_i18n %></td>
         </tr>
       </table>
