--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,15 @@
     overflow: scroll;
   }
 }
+
+.submit-center {
+ text-align: center;
+ display: flex;
+ justify-content: center;
+ height: 100px;
+ line-height: 100px;
+}
+
+.edit-bottom {
+margin-right: 20px;
+}
