concert_evalution Finish

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="background">
       <div class="background-wrapper">
         <%= render 'layouts/header' %>
-        <main>
+        <main class="mb-5">
           <p id="notice"><%= notice %></p>
           <%= yield %>
         </main>
